clusters/home/unifi/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
  labels:
    pod-security.kubernetes.io/enforce: privileged
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    volsync.backube/privileged-movers: "true"
