clusters/home/unifi/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-unifi
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "${GW_UNIFI_IP}"
  listeners:
    - protocol: HTTP
      name: http
      port: 80
      hostname: "*.${SECRET_DOMAIN}"
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert
