clusters/home/unifi/app/proxy.yaml
## No support for HTTPS backend in Cilium GW (yet)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-http
  template:
    metadata:
      labels:
        app: unifi-http
    spec:
      containers:
        - name: caddy
          image: docker.io/library/caddy:2.11.4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: caddy-config
              mountPath: /etc/caddy
              readOnly: true
      volumes:
        - name: caddy-config
          configMap:
            name: caddy-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-http
spec:
  selector:
    app: unifi-http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
spec:
  parentRefs:
    - name: gw-private
      namespace: gateway
      sectionName: https
  hostnames:
    - unifi.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: unifi-http
          port: 80
